Moved values into constant

--- a/src/main/webapp/css/register.css
+++ b/src/main/webapp/css/register.css
@@ -50,7 +50,7 @@ body {
     margin-bottom: -20px;
 }
 
-.login .button {
+.register .button {
     background: #ff9d26;
     border: none;
     margin-top: 20px;
