--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1,3 +1,27 @@
-* {
-    background: white;
+.news_block {
+    background: rgba(71, 71, 71, 0.6);
+    margin: 10px auto 10px auto;
+    width: 50%;
+    padding: 10px;
+    border-radius: 15px;
+}
+
+.news_block__header {
+    background: #ff9d26;
+    font-size: 36px;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.news_block__img img{
+    width: auto;
+    height: auto;
+
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.news_block__content {
+    font-size: 26px;
+    text-align: left;
 }
