--- a/src/main/webapp/css/news.css
+++ b/src/main/webapp/css/news.css
@@ -1,27 +1,54 @@
 .news_block {
-    background: rgba(71, 71, 71, 0.6);
+    background-color: transparent;
+    overflow: hidden;
     margin: 10px auto 10px auto;
-    width: 50%;
+    width: 40%;
     padding: 10px;
-    border-radius: 15px;
+    border: 1px solid rgba(71, 71, 71, 0.6);
+    border-radius: 5px;
 }
 
 .news_block__header {
+    float: initial;
     background: #ff9d26;
-    font-size: 36px;
+    font-size: 30px;
     text-align: center;
     text-transform: uppercase;
+    font-weight: bold;
+}
+
+.news_block__header__date {
+    float: right;
+    text-align: right;
+    font-size: 16px;
+}
+
+
+.news_block__content {
+    font-size: 26px;
+    text-align: left;
 }
 
 .news_block__img img{
     width: auto;
     height: auto;
-
     max-width: 100%;
     max-height: 100%;
 }
 
-.news_block__content {
-    font-size: 26px;
-    text-align: left;
+.news_block__header__button {
+    float: right;
+}
+
+.news_block__header__button button {
+    height: auto;
+    width: 100px;
+    background: transparent;
+    border: 1px solid #ff9d26;
+    border-radius: 5px;
+    font-size: 25px;
+}
+
+.news_block__header__button button:hover {
+    background: #ff9d26;
 }
