--- a/src/main/webapp/css/cars.css
+++ b/src/main/webapp/css/cars.css
@@ -1,3 +1,57 @@
-/*
- TODO: add styles
-*/
+.main_block {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.car_block {
+    border: 1px solid rgba(71, 71 ,71, 0.6);
+    border-radius: 5px;
+
+    margin: 10px auto 10px auto;
+
+    height: auto;
+}
+
+.car_block__brand {
+    background: #f99d26;
+    text-align: center;
+
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.car_block__img img {
+    width: 440px;
+
+    min-height: 260px;
+    max-height: 260px;
+}
+
+.car_block__characteristics {
+
+}
+.car_block__button {
+    margin: 10px 5px 10px 10px;
+    float: right;
+}
+
+.car_block__button button {
+    height: auto;
+    width: 100px;
+    background: transparent;
+    border: 1px solid #ff9d26;
+    border-radius: 5px;
+    font-size: 25px;
+}
+
+#admin_but2 {
+    border: 2px solid red;
+}
+
+#admin_but2:hover {
+    background: red;
+}
+
+.car_block__button button:hover {
+    background: #ff9d26;
+}
