--- a/src/main/webapp/css/header.css
+++ b/src/main/webapp/css/header.css
@@ -44,14 +44,101 @@
     float: right;
 }
 
+#globe:hover {
+    background: rgba(255, 157, 38, 0.8);
+}
+
+
+
+.globe {
+    height: 100vh;
+    /* This part is important for centering the content */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* End center */
+    background: -webkit-linear-gradient(to right, #834d9b, #d04ed6);
+    background: linear-gradient(to right, #834d9b, #d04ed6);
+}
+
+.globe a {
+    display: inline-block;
+    text-decoration: none;
+    padding: 15px;
+    background-color: #fff;
+    border-radius: 3px;
+    text-transform: uppercase;
+    color: #585858;
+    font-family: 'Roboto', sans-serif;
+}
+
+.modal {
+    text-align: center;
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(77, 77, 77, .7);
+    transition: all .4s;
+}
+
+.modal:target {
+    visibility: visible;
+    opacity: 1;
+}
+
+.modal__content {
+    background: #ff9d26;
+    padding: 1em 2em;
+
+    border-radius: 9px;
+    position: relative;
+    width: 500px;
+    max-width: 90%;
+}
+
+.languages {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.languages a {
+    color: rgba(71, 71, 71, 0.8);
+}
+
+.languages a:hover {
+    color: black;
+}
+
+.modal__close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #585858;
+    text-decoration: none;
+}
+
+.modal__footer {
+    text-align: right;
+}
+
+
 /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 700px) {
     .header a {
         float: none;
         display: block;
         text-align: left;
     }
     .header__links {
+        display: block;
         float: none;
     }
 }
