--- a/src/main/webapp/css/news.css
+++ b/src/main/webapp/css/news.css
@@ -57,3 +57,50 @@
 .news_block__admin_panel a:hover {
     background: #ff9d26;
 }
+
+.delete_dialog {
+    text-align: center;
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(77, 77, 77, .7);
+    transition: all .4s;
+}
+
+.delete_dialog:target {
+    overflow: hidden;
+    visibility: visible;
+    opacity: 1;
+}
+
+.delete_dialog__content {
+    background: #ff9d26;
+    padding: 1em 2em;
+
+    border-radius: 9px;
+    position: relative;
+    width: 500px;
+    max-width: 90%;
+}
+
+.delete_dialog__options {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.delete_dialog__options a {
+    text-decoration: none;
+    font-size: 24px;
+    color: black;
+}
+
+#delete_dialog__yes {
+    color: red;
+}
