--- a/src/main/webapp/css/cars.css
+++ b/src/main/webapp/css/cars.css
@@ -63,24 +63,18 @@
     float: right;
 }
 
-.car_block__button button {
+.car_block__button a {
+    text-decoration: none;
+    color: black;
     height: auto;
     width: auto;
-    min-width: 100px;
+    padding: 5px;
     background: transparent;
     border: 1px solid #ff9d26;
     border-radius: 5px;
     font-size: 25px;
 }
 
-#admin_but_delete {
-    border: 1px solid red;
-}
-
-#admin_but_delete:hover {
-    background: red;
-}
-
-.car_block__button button:hover {
+.car_block__button a:hover {
     background: #ff9d26;
 }
