--- a/src/main/webapp/css/news.css
+++ b/src/main/webapp/css/news.css
@@ -104,3 +104,9 @@
 #delete_dialog__yes {
     color: red;
 }
+
+@media screen and (max-width: 700px) {
+    .news_block {
+        width: 500px;
+    }
+}
