add styles for error

--- a/src/main/webapp/css/news_edit.css
+++ b/src/main/webapp/css/news_edit.css
@@ -1,3 +1,9 @@
+.error {
+    text-align: center;
+    color: red;
+    font-size: 20px;
+}
+
 .container {
     overflow: hidden;
     display: flex;
