--- a/src/main/webapp/css/car_edit.css
+++ b/src/main/webapp/css/car_edit.css
@@ -1,3 +1,10 @@
+.error {
+    font-size: 20px;
+    color: red;
+    text-align: center;
+}
+
+
 .container {
     margin: 0 auto;
     width: 880px;
@@ -20,7 +27,7 @@
     height: 40px;
 }
 
-.editor_block__image {
+ .editor_block__image {
     margin: 0 auto;
 }
 
