--- a/src/main/webapp/css/user_orders.css
+++ b/src/main/webapp/css/user_orders.css
@@ -1,4 +1,5 @@
 * {
+    text-decoration: none;
     font-size: 20px;
 }
 
@@ -47,4 +48,26 @@ td {
 
 .pagelinks {
     margin: 10px auto 10px auto;
+}
+
+.actions {
+    background: rgba(71, 71, 71, 0.2);
+
+}
+
+.actions a {
+    color: #ff9d26;
+}
+
+.actions a:hover {
+    opacity: .6;
+    transition: .4s;
+}
+
+#approve {
+    color: limegreen;
+}
+
+#reject {
+    color: red;
 }
