--- a/src/main/webapp/css/user_orders.css
+++ b/src/main/webapp/css/user_orders.css
@@ -34,6 +34,13 @@ td {
     border-bottom: 1px solid black;
 }
 
+textarea {
+    outline-color: #ff9d26;
+    font-size: 16px;
+    height: 100%;
+    resize: none;
+}
+
 .button_panel {
     border: none;
     border-bottom: 1px solid black;
@@ -55,11 +62,13 @@ td {
 }
 
 .actions {
-    background: rgba(71, 71, 71, 0.2);
+    background: rgba(71, 71, 71, 0.1);
 
 }
 
-.actions a {
+.actions button, .actions a {
+    border: none;
+    background: transparent;
     color: #ff9d26;
 }
 
@@ -67,7 +76,7 @@ td {
     color: #ff9d26;
 }
 
-.actions a:hover {
+.actions button:hover, .actions a:hover {
     opacity: .6;
     transition: .4s;
 }
