--- a/src/main/webapp/css/cars.css
+++ b/src/main/webapp/css/cars.css
@@ -16,6 +16,23 @@
     opacity: .7;
 }
 
+.user_panel {
+    margin-left: 15px;
+    display: flex;
+}
+
+.user_panel input, .user_panel select {
+    margin-left: 10px;
+    padding: 6px;
+    border: 1px solid #ff9d26;
+    font-size: 17px;
+}
+
+.user_panel button {
+    margin-right: 10px;
+}
+
+
 .preview__close {
     color: red;
 }
@@ -85,4 +102,12 @@
 
 .car_block__button a:hover {
     background: #ff9d26;
+}
+
+@media screen and (max-width: 915px) {
+    .user_panel {
+        display: block;
+        justify-content: center;
+        text-align: center;
+    }
 }
