--- a/src/main/webapp/css/cars.css
+++ b/src/main/webapp/css/cars.css
@@ -21,17 +21,28 @@
     display: flex;
 }
 
-.user_panel input, .user_panel select {
+.user_panel input {
     margin-left: 10px;
     padding: 6px;
     border: 1px solid #ff9d26;
     font-size: 17px;
 }
 
-.user_panel button {
-    margin-right: 10px;
+.user_panel button[type=submit] {
+    background: #ff9d26;
+
+    border: 1px solid black;
+    border-radius: 5px;
+
+    margin: 5px;
+    width: 35px;
+    height: 100%;
 }
 
+.user_panel button[type=submit]:hover {
+    opacity: 0.7;
+    transition: .4s;
+}
 
 .preview__close {
     color: red;
