add styles for nothing found block

--- a/src/main/webapp/css/cars.css
+++ b/src/main/webapp/css/cars.css
@@ -16,6 +16,15 @@
     opacity: .7;
 }
 
+.nothing_found {
+    color: red;
+    text-align: center;
+}
+
+.nothing_found a {
+    text-decoration: none;
+}
+
 .user_panel {
     margin: 10px 0 3px 15px;
     display: flex;
